wire framing update v0.0.2
- Updated base application to basic wireframe of application
- Sidebar on login
- 3 blank page templates
- Sidebar template
- Navbar

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -23,17 +23,28 @@
     <!--[if lt IE 9]>
         <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-    <page-ribbon></page-ribbon>
+
+    <!--  This is the main display block-->
+
     <div ui-view="navbar" ng-cloak></div>
-    <div class="container">
-        <div class="well" ui-view="content">
-            <!-- Angular views -->
+
+
+    <div>
+
+        <!--  sidebar -->
+        <div class="col-xs-3">
+            <div ui-view="sidebar" ng-cloak></div>
         </div>
 
-        <div class="footer" ng-cloak>
-            <p data-translate="footer">This is your footer</p>
-        </div>
+        <!--  content -->
+        <div class="col-xs-9" style="padding-left: 0">
+            <div ui-view="content"></div>
+         </div>
+
     </div>
+
+
+
 
     <!-- Google Analytics: uncomment and change UA-XXXXX-X to be your site's ID.
     <script>
@@ -88,6 +99,13 @@
     <script src="app/services/auth/auth.service.js"></script>
     <script src="app/services/auth/activate.service.js"></script>
     <script src="app/services/auth/account.service.js"></script>
+    <script src="app/page3/page3.state.js"></script>
+    <script src="app/page3/page3.controller.js"></script>
+    <script src="app/page2/page2.state.js"></script>
+    <script src="app/page2/page2.controller.js"></script>
+    <script src="app/page1/page1.state.js"></script>
+    <script src="app/page1/page1.controller.js"></script>
+    <script src="app/layouts/sidebar/sidebar.controller.js"></script>
     <script src="app/layouts/navbar/navbar.controller.js"></script>
     <script src="app/layouts/error/error.state.js"></script>
     <script src="app/home/home.state.js"></script>
@@ -168,6 +186,24 @@
     <script src="app/account/account.state.js"></script>
     <!-- endinject -->
     <!-- endbuild -->
+
+    <script>
+        (function() {
+            'use strict';
+
+            angular
+                .module('projectoneApp')
+                .controller('IndxController', IndxController);
+
+            IndxController.$inject = ['$scope', 'Principal', 'LoginService', '$state'];
+
+            function IndxController (Principal) {
+                var vm = this;
+                vm.isAuthenticated = Principal.isAuthenticated;
+            }
+        })();
+
+    </script>
 
 </body>
 </html>
