--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -25,9 +25,7 @@
     <![endif]-->
 
     <!--  This is the main display block-->
-
     <div ui-view="navbar" ng-cloak></div>
-
 
     <div>
 
@@ -37,13 +35,11 @@
         </div>
 
         <!--  content -->
-        <div class="col-xs-9" style="padding-left: 0">
+        <div class="col-xs-9" style="padding: 0">
             <div ui-view="content"></div>
          </div>
 
     </div>
-
-
 
 
     <!-- Google Analytics: uncomment and change UA-XXXXX-X to be your site's ID.
@@ -99,12 +95,6 @@
     <script src="app/services/auth/auth.service.js"></script>
     <script src="app/services/auth/activate.service.js"></script>
     <script src="app/services/auth/account.service.js"></script>
-    <script src="app/page3/page3.state.js"></script>
-    <script src="app/page3/page3.controller.js"></script>
-    <script src="app/page2/page2.state.js"></script>
-    <script src="app/page2/page2.controller.js"></script>
-    <script src="app/page1/page1.state.js"></script>
-    <script src="app/page1/page1.controller.js"></script>
     <script src="app/layouts/sidebar/sidebar.controller.js"></script>
     <script src="app/layouts/navbar/navbar.controller.js"></script>
     <script src="app/layouts/error/error.state.js"></script>
