Added project buttons to sidebar (still working on making them link)

--- a/src/main/webapp/app/home/home.html
+++ b/src/main/webapp/app/home/home.html
@@ -78,7 +78,7 @@
                                 <a href="page1/#2" data-toggle="tab">Tab 2</a>
                             </li>
                             <li>
-                                <a href="paage1/#3" data-toggle="tab">Tab 3</a>
+                                <a href="page1/#3" data-toggle="tab">Tab 3</a>
                             </li>
                         </ul>
 
