Updated homepage with content and styling

--- a/src/main/webapp/app/home/home.html
+++ b/src/main/webapp/app/home/home.html
@@ -1,8 +1,58 @@
+<link rel="stylesheet" href="content/css/home-screen.css">
+
 <div ng-show="!vm.isAuthenticated()">
-    <div class="col-xs-12" style="background-color: #47a437; height: 1000px">
-        <h2>
-            This section will show when the user is logged out
+    <div class="container-fluid bg-1 text-center margin-1" >
+        <h1 class="margin-h1">
+            EZ-TRACK
+        </h1>
+        <h3 class="bg-1-h3">
+            The tool YOU need to manage all phases of your project and deliver a successful product
+        </h3>
+
+    </div>
+    <div class="container-fluid bg-2 text-center">
+        <h2 class="margin-h2">
+            What is EZ-Track?
         </h2>
+        <h4>
+            An efficient Project Management suite with intuitive interfaces for managing the lifecycle of your project from requirements capture to issue tracking
+        </h4>
+
+    </div>
+    <div class="container-fluid bg-3 text-center">
+        <h2 class="margin-h2">
+            Key Features
+        </h2>
+        <div class = "row">
+            <div class="col-md-4">
+                <h4 class="margin-h4">
+                    Requirements Management
+                </h4>
+                <p>An easy to use interface for managing requirements through-out the project.
+                Prioritize the tasks you need to get done with User Stories and a Product Backlog.
+                </p>
+                <!--<img src="/content/images/" alt="Image">-->
+                <p> Insert image </p>
+            </div>
+            <div class="col-md-4">
+                <h4 class = "margin-h4">
+                    Collaboration
+                </h4>
+                <p>Collaborate with the team by sending direct messages or utilizing the comment forum.
+                </p>
+                <p> Insert image </p>
+                <!--<img src="" alt="Image">-->
+            </div>
+            <div class="col-md-4">
+                <h4 4 class="margin-h4">
+                    Issue Tracking
+                </h4>
+                <p>Organize issues and assign bug fixes to team members.
+                </p>
+                <p> Insert image </p>
+                <!--<img src="" alt="Image">-->
+            </div>
+        </div>
     </div>
 </div>
 
