Added buttons on teams page and team-dialog to create team member, also added button on project dialog to create team.

--- a/src/main/webapp/app/entities/team/teams.html
+++ b/src/main/webapp/app/entities/team/teams.html
@@ -10,6 +10,12 @@
                         Create new Team
                     </span>
                 </button>
+                <button class="btn btn-primary" ui-sref="tmember.new" >
+                    <span class="glyphicon glyphicon-plus"></span>
+                    <span class="hidden-xs-down" >
+                        Create new Team Member
+                    </span>
+                </button>
             </div>
             <div class="col-xs-8 no-padding-right">
                 <form name="searchForm" class="form-inline">
