--- a/src/main/webapp/app/entities/tmember/tmember-dialog.html
+++ b/src/main/webapp/app/entities/tmember/tmember-dialog.html
@@ -25,6 +25,7 @@
             <select class="form-control" id="field_user" name="user" ng-model="vm.tmember.user" ng-options="user as user.login for user in vm.users track by user.id">
                 <option value=""></option>
             </select>
+            <span class="small text-muted">Must have registered account</span>
         </div>
     </div>
     <div class="modal-footer">
