--- a/src/main/webapp/app/entities/project/project-dialog.html
+++ b/src/main/webapp/app/entities/project/project-dialog.html
@@ -32,6 +32,12 @@
                 <option value=""></option>
             </select>
         </div>
+        <button class="btn btn-primary" ui-sref="team.new">
+            <span class="glyphicon glyphicon-plus"></span>
+            <span class="hidden-xs-down">
+                Create New Team
+            </span>
+        </button>
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="vm.clear()">
