--- a/src/main/webapp/app/entities/team/teams.html
+++ b/src/main/webapp/app/entities/team/teams.html
@@ -10,6 +10,7 @@
                         Create new Team
                     </span>
                 </button>
+                <!--Button calls function .new from tmember.state.js-->
                 <button class="btn btn-primary" ui-sref="tmember.new" >
                     <span class="glyphicon glyphicon-plus"></span>
                     <span class="hidden-xs-down" >
