--- a/src/main/webapp/app/entities/project/project-dialog.html
+++ b/src/main/webapp/app/entities/project/project-dialog.html
@@ -32,6 +32,7 @@
                 <option value=""></option>
             </select>
         </div>
+        <!--Button calls function .new from team.state.js-->
         <button class="btn btn-primary" ui-sref="team.new">
             <span class="glyphicon glyphicon-plus"></span>
             <span class="hidden-xs-down">
