--- a/src/main/webapp/app/account/password/password.html
+++ b/src/main/webapp/app/account/password/password.html
@@ -57,6 +57,7 @@
                 </div>
 
                 <button type="submit" ng-disabled="form.$invalid" class="btn btn-primary">Save</button>
+                <button type="button" ng-click="vm.clear()" class="btn btn-sm">Close</button>
             </form>
         </div>
     </div>
