Modified home page with more content, images, and styling

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -31,10 +31,10 @@
 
     <div>
 
-        <!--  sidebar
+        <!-- sidebar -->
         <div class="col-xs-3">
             <div ui-view="sidebar" ng-cloak></div>
-        </div>-->
+        </div>
 
         <!--  content -->
         <div class="col-md-12" style="padding: 0">
