Moved management content from the side bar over to home.html
Changed parent for project.new to be project.html from home.html

Commented out the starter content in home.html

Added project name and project owner to to requirement-detail.html

Added project and team to the requirements-dialog form

Added project and owner to the requirements table

Commented out button to create team member from teams.html

Commented out all of the content that was in sidebar.html when user is logged in

--- a/src/main/webapp/app/entities/requirement/requirement-detail.html
+++ b/src/main/webapp/app/entities/requirement/requirement-detail.html
@@ -12,6 +12,14 @@
         <dd>
             <span>{{vm.requirement.status}}</span>
         </dd>
+        <dt><span>Project Name</span></dt>
+        <dd>
+            <span>{{vm.project.name}}</span>
+        </dd>
+        <dt><span>Owner</span></dt>
+        <dd>
+            <span>{{vm.team.name}}</span>
+        </dd>
     </dl>
 
     <button type="submit"
