--- a/src/main/webapp/app/entities/team/teams.html
+++ b/src/main/webapp/app/entities/team/teams.html
@@ -10,13 +10,13 @@
                         Create new Team
                     </span>
                 </button>
-                <!--Button calls function .new from tmember.state.js-->
-                <button class="btn btn-primary" ui-sref="tmember.new" >
-                    <span class="glyphicon glyphicon-plus"></span>
-                    <span class="hidden-xs-down" >
-                        Create new Team Member
-                    </span>
-                </button>
+                <!--&lt;!&ndash;Button calls function .new from tmember.state.js&ndash;&gt;-->
+                <!--<button class="btn btn-primary" ui-sref="tmember.new" >-->
+                    <!--<span class="glyphicon glyphicon-plus"></span>-->
+                    <!--<span class="hidden-xs-down" >-->
+                        <!--Create new Team Member-->
+                    <!--</span>-->
+                <!--</button>-->
             </div>
             <div class="col-xs-8 no-padding-right">
                 <form name="searchForm" class="form-inline">
