Commented out sidebar div code from index.html

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -32,14 +32,14 @@
     <div>
 
         <!-- sidebar -->
-        <div class="col-xs-3">
-            <div ui-view="sidebar" ng-cloak></div>
-        </div>
+        <!--<div class="col-xs-3">-->
+            <!--<div ui-view="sidebar" ng-cloak></div>-->
+        <!--</div>-->
 
         <!--  content -->
         <div class="col-md-12" style="padding: 0">
             <div ui-view="content"></div>
-         </div>
+        </div>
 
     </div>
 
