--- a/src/main/webapp/app/home/home.html
+++ b/src/main/webapp/app/home/home.html
@@ -2,8 +2,8 @@
 <div class="wrapper">
 <div ng-show="!vm.isAuthenticated()">
     <div class="container-fluid bg-1 text-center margin-1" >
-        <div class="col-xs-4">
-        <!--<img src="/content/images/EZTrack-logo1.jpg" alt="Image">-->
+        <div class="col-xs-4 ">
+        <!--<img src="/content/images/EZTrack-250-transparent.png" alt="Image">-->
         </div>
         <h1 class="margin-h1">
             EZTrack
@@ -115,7 +115,7 @@
                                 <div class="project-features" style="display: flex; align-content: center; justify-content: center; flex-direction: column">
                                     <div>
                                         <!--Button changes state to project-->
-                                        <button class="btn btn-primary" ui-sref="project" >
+                                        <button class="btn btn-primary" ui-sref="project" ui-sref-active="active">
                                             <span class="glyphicon glyphicon-plus"></span>
                                             <span class="hidden-xs-down" >
                                             Manage Your Projects
@@ -128,7 +128,7 @@
                             <div class="tab-pane well" id="2">
                                 <div>
                                     <!--Button calls function .new from requirement.state.js-->
-                                    <button class="btn btn-primary" ui-sref="requirement" >
+                                    <button class="btn btn-primary" ui-sref="requirement" ui-sref-active="active">
                                         <span class="glyphicon glyphicon-plus"></span>
                                         <span class="hidden-xs-down" >
                                             Manage Your Requirements
@@ -160,7 +160,12 @@
                                 </div>
                             </div>
                             <div class="tab-pane well" id="5">
-                                TODO: Add issue tracking feature
+                                <button class="btn btn-primary" ui-sref="issue">
+                                    <span class="glyphicon glyphicon-plus"> </span>
+                                    <span class="hidden-xs-down">
+                                        Manage Issues
+                                    </span>
+                                </button>
                             </div>
                         </div>
                     </div>
