--- a/src/main/webapp/app/account/register/register.html
+++ b/src/main/webapp/app/account/register/register.html
@@ -2,6 +2,7 @@
     <div class="row">
         <div class="col-md-8 col-md-offset-2">
             <h1>Registration</h1>
+            {{vm.registerAccount}}
 
             <div class="alert alert-success" ng-show="vm.success">
                 <strong>Registration saved!</strong> Please check your email for confirmation.
