--- a/src/main/webapp/app/entities/team/team-dialog.html
+++ b/src/main/webapp/app/entities/team/team-dialog.html
@@ -24,13 +24,12 @@
             <label for="field_tmember">Tmember</label>
             <select class="form-control" id="field_tmember" multiple name="tmember" ng-model="vm.team.tmembers" ng-options="tmember as tmember.membername for tmember in vm.tmembers track by tmember.id"></select>
         </div>
-        <!--Button calls function .new from tmember.state.js-->
-        <button class="btn btn-primary" ui-sref="tmember.new" >
-            <span class="glyphicon glyphicon-plus"></span>
-            <span class="hidden-xs-down" >
-                Create new Team Member
-            </span>
-        </button>
+        <div class="form-group">
+            <label for="field_owner">Owner</label>
+            <select class="form-control" id="field_owner" name="owner" ng-model="vm.team.owner" ng-options="user as user.login for user in vm.users track by user.id">
+                <option value=""></option>
+            </select>
+        </div>
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="vm.clear()">
