--- a/src/main/webapp/app/entities/team/teams.html
+++ b/src/main/webapp/app/entities/team/teams.html
@@ -10,13 +10,6 @@
                         Create new Team
                     </span>
                 </button>
-                <!--&lt;!&ndash;Button calls function .new from tmember.state.js&ndash;&gt;-->
-                <!--<button class="btn btn-primary" ui-sref="tmember.new" >-->
-                    <!--<span class="glyphicon glyphicon-plus"></span>-->
-                    <!--<span class="hidden-xs-down" >-->
-                        <!--Create new Team Member-->
-                    <!--</span>-->
-                <!--</button>-->
             </div>
             <div class="col-xs-8 no-padding-right">
                 <form name="searchForm" class="form-inline">
@@ -45,6 +38,7 @@
                     <th><span>ID</span></th>
                     <th><span>Teamname</span></th>
                     <th><span>Tmember</span></th>
+                    <th><span>Owner</span></th>
                     <th></th>
                 </tr>
             </thead>
@@ -56,6 +50,9 @@
                         <span ng-repeat="tmember in team.tmembers">
                             <a class="form-control-static" ui-sref="tmember-detail({id: tmember.id})">{{tmember.membername}}</a>{{$last ? '' : ', '}}
                         </span>
+                    </td>
+                    <td>
+                        {{team.owner.login}}
                     </td>
                     <td class="text-right">
                         <div class="btn-group flex-btn-group-container">
