--- a/src/main/webapp/app/home/home.html
+++ b/src/main/webapp/app/home/home.html
@@ -1,5 +1,4 @@
-<link rel="stylesheet" href="content/css/home-screen.css">
-<div class="wrapper">
+
 <div ng-show="!vm.isAuthenticated()">
     <div class="container-fluid bg-1 text-center margin-1" >
         <div class="col-xs-4">
@@ -65,89 +64,42 @@
 
 <!-- This is the 'section' that will show once the user logs in -->
 <div ng-show="vm.isAuthenticated()">
-    <div class="col-xs-12" style="background-color: #2d7ca4; height: 1000px">
-        <div class="container-fluid well-dashboard" style="min-height: 700px">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div id="exTab2">
-                        <ul class="nav nav-tabs">
-                            <li class="active">
-                                <a  href="page1/#1" data-toggle="tab">Projects</a>
-                            </li>
-                            <li>
-                                <a href="page1/#2" data-toggle="tab">Requirements</a>
-                            </li>
-                            <li>
-                                <a href="page1/#3" data-toggle="tab">Backlog</a>
-                            </li>
-                            <li>
-                                <a href="page1/#4" data-toggle="tab">Teams</a>
-                            </li>
-                            <li>
-                                <a href="page1/#5" data-toggle="tab">Issues</a>
-                            </li>
-                        </ul>
-
-                        <div class="tab-content" style="text-align: center;">
-                            <br>
-                            <div class="tab-pane active well" id="1">
-
-                                <!--Project div-->
-                                <div class="project-features" style="display: flex; align-content: center; justify-content: center; flex-direction: column">
-                                    <div>
-                                        <!--Button changes state to project-->
-                                        <button class="btn btn-primary" ui-sref="project" >
-                                            <span class="glyphicon glyphicon-plus"></span>
-                                            <span class="hidden-xs-down" >
-                                            Manage Your Projects
-                                        </span>
-                                        </button>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="tab-pane well" id="2">
-                                <div>
-                                    <!--Button calls function .new from requirement.state.js-->
-                                    <button class="btn btn-primary" ui-sref="requirement" >
-                                        <span class="glyphicon glyphicon-plus"></span>
-                                        <span class="hidden-xs-down" >
-                                            Manage Your Requirements
-                                        </span>
-                                    </button>
-
-                                </div>
-                            </div>
-                            <div class="tab-pane well" id="3">
-                                TODO: Add backlog feature
-                            </div>
-                            <div class="tab-pane well" id="4">
-                                <!--Team div-->
-                                <div>
-                                    <!--Button changes state to team-->
-                                    <button class="btn btn-primary" ui-sref="team" >
-                                        <span class="glyphicon glyphicon-plus"></span>
-                                        <span class="hidden-xs-down" >
-                                            Manage Your Teams
-                                        </span>
-                                    </button>
-                                    <!--Button changes state to tmember-->
-                                    <button class="btn btn-primary" ui-sref="tmember" >
-                                        <span class="glyphicon glyphicon-plus"></span>
-                                        <span class="hidden-xs-down" >
-                                            Manage Your Team Members
-                                        </span>
-                                    </button>
-                                </div>
-                            </div>
-                            <div class="tab-pane well" id="5">
-                                TODO: Add issue tracking feature
-                            </div>
-                        </div>
-                    </div>
-                    <br>
-                </div>
-            </div>
+    <div class="col-md-2" style="background-color: #00b3ee; height: 1000px">
+        <div id="projectsidebar">
+            <span>
+                  <b>Projects</b>
+            </span>
+            <span>
+                <button class="btn btn-primary" ui-sref="project.new">
+                <span class="glyphicon glyphicon-plus"></span>
+                </button>
+            </span>
         </div>
+        <div id="teamsidebar">
+             <span>
+                  <b>Team</b>
+            </span>
+            <span>
+                <button class="btn btn-primary" ui-sref="team.new" >
+                <span class="glyphicon glyphicon-plus"></span>
+                </button>
+            </span>
+        </div>
+        <div id="discussionsidebar">
+            <span>
+                  <b>Discussions</b>
+            </span>
+            <span>
+                <button class="btn btn-primary">
+                <span class="glyphicon glyphicon-plus"></span>
+                </button>
+            </span>
+        </div>
+
     </div>
+    <div class="col-md-10" style="background-color: #9c27b0; height: 1000px">
+
+    </div>
+
 </div>
-</div>
+
