--- a/src/main/webapp/app/entities/issue/issue-detail.html
+++ b/src/main/webapp/app/entities/issue/issue-detail.html
@@ -3,7 +3,7 @@
     <h2><span>Issue</span> {{vm.issue.id}}</h2>
     <hr>
     <jhi-alert-error></jhi-alert-error>
-    <dl class="dl-horizontal jh-entity-details">
+    <dl class="row jh-entity-details">
         <dt><span>Name</span></dt>
         <dd>
             <span>{{vm.issue.name}}</span>
