--- a/src/main/webapp/app/entities/userstory/userstory-detail.html
+++ b/src/main/webapp/app/entities/userstory/userstory-detail.html
@@ -3,7 +3,7 @@
     <h2><span>Userstory</span> {{vm.userstory.id}}</h2>
     <hr>
     <jhi-alert-error></jhi-alert-error>
-    <dl class="dl-horizontal jh-entity-details">
+    <dl class="row jh-entity-details">
         <dt><span>Title</span></dt>
         <dd>
             <span>{{vm.userstory.title}}</span>
@@ -23,12 +23,6 @@
         <dt><span>Priority</span></dt>
         <dd>
             <span>{{vm.userstory.priority}}</span>
-        </dd>
-        <dt><span>Tmember</span></dt>
-        <dd>
-            <span ng-repeat="tmember in vm.userstory.tmembers">
-                <a ui-sref="tmember-detail({id: tmember.id})">{{tmember.membername}}</a>{{$last ? '' : ', '}}
-            </span>
         </dd>
     </dl>
 
