--- a/src/main/webapp/app/entities/requirement/requirement-detail.html
+++ b/src/main/webapp/app/entities/requirement/requirement-detail.html
@@ -3,7 +3,7 @@
     <h2><span>Requirement</span> {{vm.requirement.id}}</h2>
     <hr>
     <jhi-alert-error></jhi-alert-error>
-    <dl class="dl-horizontal jh-entity-details">
+    <dl class="row jh-entity-details">
         <dt><span>Name</span></dt>
         <dd>
             <span>{{vm.requirement.name}}</span>
@@ -11,14 +11,6 @@
         <dt><span>Status</span></dt>
         <dd>
             <span>{{vm.requirement.status}}</span>
-        </dd>
-        <dt><span>Project Name</span></dt>
-        <dd>
-            <span>{{vm.project.name}}</span>
-        </dd>
-        <dt><span>Owner</span></dt>
-        <dd>
-            <span>{{vm.team.name}}</span>
         </dd>
     </dl>
 
