--- a/src/main/webapp/app/entities/project/projects.html
+++ b/src/main/webapp/app/entities/project/projects.html
@@ -38,6 +38,8 @@
                     <th><span>ID</span></th>
                     <th><span>Name</span></th>
                     <th><span>Description</span></th>
+                    <th><span>Powner</span></th>
+                    <th><span>Pmember</span></th>
                     <th></th>
                 </tr>
             </thead>
@@ -46,6 +48,14 @@
                     <td><a ui-sref="project-detail({id:project.id})">{{project.id}}</a></td>
                     <td>{{project.name}}</td>
                     <td>{{project.description}}</td>
+                    <td>
+                        {{project.powner.login}}
+                    </td>
+                    <td>
+                        <span ng-repeat="pmember in project.pmembers">
+                            {{pmember.login}}{{$last ? '' : ', '}}
+                        </span>
+                    </td>
                     <td class="text-right">
                         <div class="btn-group flex-btn-group-container">
                             <button type="submit"
