--- a/src/main/webapp/app/home/home.html
+++ b/src/main/webapp/app/home/home.html
@@ -67,34 +67,18 @@
     <div class="col-md-2" style="background-color: #00b3ee; height: 1000px">
         <div id="projectsidebar">
             <span>
-                  <b>Projects</b>
+                  <h4>My Projects</h4>
             </span>
+            <div ng-repeat="project in vm.myProjects track by project.id">
+                {{project.name}}
+            </div>
             <span>
                 <button class="btn btn-primary" ui-sref="project.new">
                 <span class="glyphicon glyphicon-plus"></span>
                 </button>
             </span>
         </div>
-        <div id="teamsidebar">
-             <span>
-                  <b>Team</b>
-            </span>
-            <span>
-                <button class="btn btn-primary" ui-sref="team.new" >
-                <span class="glyphicon glyphicon-plus"></span>
-                </button>
-            </span>
-        </div>
-        <div id="discussionsidebar">
-            <span>
-                  <b>Discussions</b>
-            </span>
-            <span>
-                <button class="btn btn-primary">
-                <span class="glyphicon glyphicon-plus"></span>
-                </button>
-            </span>
-        </div>
+
 
     </div>
     <div class="col-md-10" style="background-color: #9c27b0; height: 1000px">
