--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -128,6 +128,7 @@
     <script src="app/entities/project/project.service.js"></script>
     <script src="app/entities/project/project.search.service.js"></script>
     <script src="app/entities/project/project.controller.js"></script>
+    <script src="app/entities/project/addpmember-controller.js"></script>
     <script src="app/entities/issue/issue-dialog.controller.js"></script>
     <script src="app/entities/issue/issue-detail.controller.js"></script>
     <script src="app/entities/issue/issue-delete-dialog.controller.js"></script>
