--- a/src/main/webapp/app/entities/project/project-detail.html
+++ b/src/main/webapp/app/entities/project/project-detail.html
@@ -1,37 +1,74 @@
 
+<!-- This is the 'section' that will show once the user logs in -->
 <div>
-    <h2><span>Project</span> {{vm.project.id}}</h2>
-    <hr>
-    <jhi-alert-error></jhi-alert-error>
-    <dl class="row jh-entity-details">
-        <dt><span>Name</span></dt>
-        <dd>
-            <span>{{vm.project.name}}</span>
-        </dd>
-        <dt><span>Description</span></dt>
-        <dd>
-            <span>{{vm.project.description}}</span>
-        </dd>
-        <dt><span>Powner</span></dt>
-        <dd>
-            {{vm.project.powner.login}}
-        </dd>
-        <dt><span>Pmember</span></dt>
-        <dd>
+    <div class="col-md-2" style="background-color: #00b3ee; height: 1000px">
+        <div id="projectsidebar">
+            <span>
+                  <h4>My Projects</h4>
+            </span>
+            <div ng-repeat="project in vm.myProjects track by project.id">
+                {{project.name}} <button type="submit"
+                                         ui-sref="project-detail({id:project.id})"
+                                         class="btn btn-sm">
+                <span class="glyphicon glyphicon-eye-open"></span>
+                <span class="hidden-sm-down"></span>
+            </button>
+            </div>
+            <span>
+                <button class="btn btn-primary" ui-sref="project.new">
+                <span class="glyphicon glyphicon-plus"></span>
+                </button>
+            </span>
+        </div>
+
+
+    </div>
+    <div class="col-md-10" style="background-color: #9c27b0; height: 1000px">
+        <div>
+            <h2><span>Project</span> {{vm.project.id}}</h2>
+            <hr>
+            <jhi-alert-error></jhi-alert-error>
+            <dl class="row jh-entity-details">
+                <dt><span>Name</span></dt>
+                <dd>
+                    <span>{{vm.project.name}}</span>
+                </dd>
+                <dt><span>Description</span></dt>
+                <dd>
+                    <span>{{vm.project.description}}</span>
+                </dd>
+                <dt><span>Powner</span></dt>
+                <dd>
+                    {{vm.project.powner.login}}
+                </dd>
+                <dt><span>Pmember</span></dt>
+                <dd>
             <span ng-repeat="pmember in vm.project.pmembers">
                 {{pmember.login}}{{$last ? '' : ', '}}
             </span>
-        </dd>
-    </dl>
+                </dd>
+            </dl>
 
-    <button type="submit"
-            ui-sref="{{ vm.previousState }}"
-            class="btn btn-info">
-        <span class="glyphicon glyphicon-arrow-left"></span>&nbsp;<span> Back</span>
-    </button>
+            <button type="submit"
+                    ui-sref="{{ vm.previousState }}"
+                    class="btn btn-info">
+                <span class="glyphicon glyphicon-arrow-left"></span>&nbsp;<span> Back</span>
+            </button>
 
-    <button type="button" ui-sref="project-detail.edit({id:vm.project.id})" class="btn btn-primary">
-        <span class="glyphicon glyphicon-pencil"></span>
-        <span class="hidden-sm-down"> Edit</span>
-    </button>
+            <button type="button" ui-sref="project-detail.edit({id:vm.project.id})" class="btn btn-primary">
+                <span class="glyphicon glyphicon-pencil"></span>
+                <span class="hidden-sm-down"> Edit</span>
+            </button>
+            <button type="button" ui-sref="project-detail.addmember({id:vm.project.id})" class="btn btn-primary">
+                <span class="glyphicon glyphicon-pencil"></span>
+                <span class="hidden-sm-down"> Add Member</span>
+            </button>
+        </div>
+
+    </div>
+
 </div>
+
+
+
+
