--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -121,6 +121,7 @@
     <script src="app/entities/requirement/requirement.service.js"></script>
     <script src="app/entities/requirement/requirement.search.service.js"></script>
     <script src="app/entities/requirement/requirement.controller.js"></script>
+    <script src="app/entities/project/project-new.controller.js"></script>
     <script src="app/entities/project/project-dialog.controller.js"></script>
     <script src="app/entities/project/project-detail.controller.js"></script>
     <script src="app/entities/project/project-delete-dialog.controller.js"></script>
