--- a/src/main/webapp/app/entities/project/project-detail.html
+++ b/src/main/webapp/app/entities/project/project-detail.html
@@ -1,5 +1,3 @@
-
-<!-- This is the 'section' that will show once the user logs in -->
 <div>
     <div class="col-md-2" style="background-color: #00b3ee; height: 1000px">
         <div id="projectsidebar">
@@ -25,11 +23,11 @@
     </div>
     <div class="col-md-10" style="background-color: #9c27b0; height: 1000px">
         <div>
-            <h2><span>Project</span> {{vm.project.id}}</h2>
+            <h2><span>Project ID</span> {{vm.project.id}}</h2>
             <hr>
             <jhi-alert-error></jhi-alert-error>
             <dl class="row jh-entity-details">
-                <dt><span>Name</span></dt>
+                <dt><span>Project Name</span></dt>
                 <dd>
                     <span>{{vm.project.name}}</span>
                 </dd>
@@ -37,11 +35,18 @@
                 <dd>
                     <span>{{vm.project.description}}</span>
                 </dd>
-                <dt><span>Powner</span></dt>
+                <dt><span>Project Files</span></dt>
+                <dd>
+                    <div ng-if="vm.project.pfiles">
+                        <a ng-click="vm.openFile(vm.project.pfilesContentType, vm.project.pfiles)">open</a>
+                        {{vm.project.pfilesContentType}}, {{vm.byteSize(vm.project.pfiles)}}
+                    </div>
+                </dd>
+                <dt><span>Project Owner</span></dt>
                 <dd>
                     {{vm.project.powner.login}}
                 </dd>
-                <dt><span>Pmember</span></dt>
+                <dt><span>Project Members</span></dt>
                 <dd>
             <span ng-repeat="pmember in vm.project.pmembers">
                 {{pmember.login}}{{$last ? '' : ', '}}
@@ -58,10 +63,6 @@
             <button type="button" ui-sref="project-detail.edit({id:vm.project.id})" class="btn btn-primary">
                 <span class="glyphicon glyphicon-pencil"></span>
                 <span class="hidden-sm-down"> Edit</span>
-            </button>
-            <button type="button" ui-sref="project-detail.addmember({id:vm.project.id})" class="btn btn-primary">
-                <span class="glyphicon glyphicon-pencil"></span>
-                <span class="hidden-sm-down"> Add Member</span>
             </button>
         </div>
 
