--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -138,6 +138,13 @@
     <script src="app/entities/issue/issue.search.service.js"></script>
     <script src="app/entities/issue/issue.controller.js"></script>
     <script src="app/entities/entity.state.js"></script>
+    <script src="app/entities/comment/comment-dialog.controller.js"></script>
+    <script src="app/entities/comment/comment-detail.controller.js"></script>
+    <script src="app/entities/comment/comment-delete-dialog.controller.js"></script>
+    <script src="app/entities/comment/comment.state.js"></script>
+    <script src="app/entities/comment/comment.service.js"></script>
+    <script src="app/entities/comment/comment.search.service.js"></script>
+    <script src="app/entities/comment/comment.controller.js"></script>
     <script src="app/components/util/truncate-words.filter.js"></script>
     <script src="app/components/util/truncate-characters.filter.js"></script>
     <script src="app/components/util/sort-by.directive.js"></script>
