--- a/src/main/webapp/app/entities/project/project-dialog.html
+++ b/src/main/webapp/app/entities/project/project-dialog.html
@@ -55,7 +55,7 @@
             </select>
         </div>
         <div class="form-group">
-            <label for="field_pmember">Project member</label>
+            <label for="field_pmember">Promember</label>
             <select class="form-control" id="field_pmember" multiple name="pmember" ng-model="vm.project.pmembers" ng-options="user as user.login for user in vm.users track by user.id"></select>
         </div>
     </div>
